--- a/project4/css/style.css
+++ b/project4/css/style.css
@@ -1,14 +1,108 @@
-*{
+ /* *{
     margin:0;
     padding: 0;
      box-sizing: border-box;
   font-family: "Red Rose", cursive;
+} */
+html{
+    background-color: rgb(26, 16, 3);
 }
-body{
-    width:100%;
+.wallpaper{
+    display:block;
+    background-image:url("../images/img1.jpg");
     height:100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./images/img2.jpg");
+    left:0;
+    width:100%;
+    top:0;
+    opacity:0.7;
+    background-position: center;
     background-size: cover;
-    background-attachment: fixed;
+    position: fixed;
 }
+.content {
+    margin-top: 30px;
+    display: block;
+    position: relative;
+    width:100%; 
+    }
+    .header{
+        display: flex;
+        justify-content: space-between;
+         margin-left: 3%;
+         margin-top: 2%;
+         margin-right: 2%;
+        top:3%;
+        
+    }
+    ul{
+        margin: 0 0 10px 0;
+         padding: 0;
+        display: flex;
+        justify-content: space-between;
+    }
+    li {
+        padding: 20px;
+        list-style-type: none;
+        
+      }
+      a{
+        text-decoration: none;
+        color: rgb(220, 220, 58);
+        font-size: 22px;
+      }
+      .logo{
+         margin-top:12px;
+         margin-left: 12px;
+      }
+      .battan{
+        margin-top:13px;
+        margin-right: 12px;
+      }
+      .buttonheader{
+        color: aliceblue;
+        height:50px;
+        width: 100px;
+        font-size: 24px;
+        border: none;
+        cursor:pointer;
+        background-color: rgba(255, 0, 0, 0.897);
+      }
+      .text{
+       
+        margin-left: 3%;
+         margin-top: 2%;
+         margin-right: 2%;
+         height:80vh;
+      }
+      .maintext, .belowbuttoncontainer{
+        margin-left: 100px;
+        margin-right: 100px;
+        
+      }
+      .maintext{
+        height: 60vh;
+      }
+      p{
+        font-size: 120px;
+        line-height: 0.8;
+        margin-left: 100px;
+        color: rgb(209, 211, 52);
+      }
+      p1{
+        margin-left: 100px;
+      }
+      .belowbuttoncontainer{
+        margin-left:40%;
+        margin-right:40%;
+        height: 60px;
+        width: 300px;
+      }
+      .belowbutton{
+        margin-left:0;
+        margin-right:0;
+        background-color: red;
+        font-size: 30px;
+        color: aliceblue;
+        cursor: pointer;
+        border:none;
+      }
